--- a/02_example/example.tex
+++ b/02_example/example.tex
@@ -22,3 +22,9 @@
 \textbf{***Second Earth parallel reality example, think about what that person at DEMOfest was saying about being able to walk around Paris \& at any moment/location to transition into what it was like in the past.}
 
 \textit{``The implication of HR is that, wherever you are, you can always be somewhere else''} - HyperReality p149
+
+%warehouse art exhibit example, (using physical space/layout as canvas for artistic expression)
+
+%video game example
+
+%cultural heritage example
